# aoc2020

./: Cargo.toml
src/: main.rs
src/days/: day_1.rs  day_10.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_8.rs  mod.rs
