[package]
name = "aoc2020"
version = "0.1.0"
authors = ["David Richardson <david.richardson@biositesystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"
